force-app/main/default/objects/Apttus_Config2__IncentiveBenefitData__c/Apttus_Config2__IncentiveBenefitData__c.object-meta.xml
<CustomObject>
    <description>Represents a single benefit data row associated with the incentive benefit</description>
    <label>Incentive Benefit Data</label>
    <nameField>
        <displayFormat>BD-{00000000}</displayFormat>
        <label>Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Benefit Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>