force-app/main/default/objects/Apttus_Config2__IncentiveBenefitData__c/fields/Apttus_Config2__BeneficiaryId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BeneficiaryId__c</fullName>
    <description>ID of the beneficiary associated with the benefit</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the beneficiary associated with the benefit</inlineHelpText>
    <label>Beneficiary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>