force-app/main/default/objects/Apttus_Config2__IncentiveBenefitData__c/fields/Apttus_Config2__BenefitProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BenefitProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the benefit product associated with the benefit</description>
    <inlineHelpText>ID of the criteria product associated with the benefit</inlineHelpText>
    <label>Benefit Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Benefit Data (Benefit Product)</relationshipLabel>
    <relationshipName>BenefitDataBenefitProduct</relationshipName>
    <type>Lookup</type>
</CustomField>