force-app/main/default/objects/Apttus_Config2__IncentiveBenefitData__c/fields/Apttus_Config2__CriteriaBundleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CriteriaBundleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the criteria ad hoc bundle associated with the benefit</description>
    <inlineHelpText>ID of the criteria ad hoc bundle associated with the benefit</inlineHelpText>
    <label>Criteria Bundle</label>
    <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
    <relationshipLabel>Incentive Benefit Data</relationshipLabel>
    <relationshipName>IncentiveBenefitData</relationshipName>
    <type>Lookup</type>
</CustomField>