force-app/main/default/objects/Apttus_Config2__IncentiveBenefitData__c/fields/Apttus_Config2__CriteriaProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CriteriaProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the criteria product associated with the benefit</description>
    <inlineHelpText>ID of the criteria product associated with the benefit</inlineHelpText>
    <label>Criteria Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Benefit Data (Criteria Product)</relationshipLabel>
    <relationshipName>BenefitDataCriteriaProduct</relationshipName>
    <type>Lookup</type>
</CustomField>